// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MethodsRenderer should render a table 1`] = `
<Styled(Table)
  columns={
    Array [
      Object {
        "caption": "Method name",
        "render": [Function],
      },
      Object {
        "caption": "Parameters",
        "render": [Function],
      },
      Object {
        "caption": "Description",
        "render": [Function],
      },
    ]
  }
  getRowKey={[Function]}
  rows={
    Array [
      Object {
        "description": "Public",
        "modifiers": Array [],
        "name": "method",
        "params": Array [],
      },
    ]
  }
/>
`;

exports[`PropsRenderer should render JsDoc tags 1`] = `
<ul>
  <li>
    <div>
      <Styled(Name)
        deprecated={false}
      >
        Foo()
      </Styled(Name)>
    </div>
    <div>
      <Styled(Arguments)
        args={Array []}
      />
    </div>
    <div>
      <div>
        <JsDoc
          since={
            Array [
              Object {
                "description": "1.0.0",
                "title": "since",
              },
            ]
          }
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render deprecated JsDoc tags 1`] = `
<ul>
  <li>
    <div>
      <Styled(Name)
        deprecated={true}
      >
        Foo()
      </Styled(Name)>
    </div>
    <div>
      <Styled(Arguments)
        args={Array []}
      />
    </div>
    <div>
      <div>
        <JsDoc
          deprecated={
            Array [
              Object {
                "description": "Use *another* method",
                "title": "description",
              },
            ]
          }
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render parameters 1`] = `
<ul>
  <li>
    <div>
      <Styled(Name)
        deprecated={false}
      >
        method()
      </Styled(Name)>
    </div>
    <div>
      <Styled(Arguments)
        args={
          Array [
            Object {
              "description": "Description",
              "name": "value",
              "optional": false,
              "type": Object {
                "name": "Number",
              },
            },
          ]
        }
      />
    </div>
    <div>
      <div>
        <Markdown
          text="Public"
        />
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render public method 1`] = `
<ul>
  <li>
    <div>
      <Styled(Name)
        deprecated={false}
      >
        method()
      </Styled(Name)>
    </div>
    <div>
      <Styled(Arguments)
        args={Array []}
      />
    </div>
    <div>
      <div>
        <Markdown
          text="Public"
        />
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;

exports[`PropsRenderer should render returns 1`] = `
<ul>
  <li>
    <div>
      <Styled(Name)
        deprecated={false}
      >
        method()
      </Styled(Name)>
    </div>
    <div>
      <Styled(Arguments)
        args={Array []}
      />
    </div>
    <div>
      <div>
        <Styled(Argument)
          block={true}
          description="Description"
          returns={true}
          type={
            Object {
              "name": "Number",
            }
          }
        />
        <JsDoc />
      </div>
    </div>
  </li>
</ul>
`;
